--- a/data/agentic_tools_comparison.yml
+++ b/data/agentic_tools_comparison.yml
@@ -37,14 +37,14 @@ categories:
         amazon_kiro_highlight: 3
 
       - name: Sub-Agents
-        cline: No (coming soon)
+        cline: Yes
         claude_code: Yes
         cursor: No
-        cursor_highlight: 2
+        cursor_highlight: 3
         github_copilot: No
-        github_copilot_highlight: 2
+        github_copilot_highlight: 3
         amazon_kiro: No
-        amazon_kiro_highlight: 2
+        amazon_kiro_highlight: 3
 
       - name: Custom Agents
         cline: No (coming soon)
