--- a/data/agentic_tools_comparison.yml
+++ b/data/agentic_tools_comparison.yml
@@ -137,6 +137,22 @@ categories:
         amazon_kiro_highlight: 4
         openai_codex: Medium/High
 
+      - name: Skills
+        claude_code: Yes
+        claude_code_highlight: 0
+        cline: No
+        cline_highlight: 5
+        cursor: No
+        cursor_highlight: 5
+        github_copilot: No
+        github_copilot_highlight: 5
+        google_antigravity: No
+        google_antigravity_highlight: 5
+        amazon_kiro: No
+        amazon_kiro_highlight: 5
+        openai_codex: No
+        openai_codex_highlight: 5
+
   - name: Operational management
     features:
       - name: Consumption budget controls
